Updated Mattermost and alpine versions

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,14 +1,14 @@
-FROM alpine:3.8
-MAINTAINER Andrea Pellegrini <uschti@gmail.com>
+FROM alpine:3.10
 
 # Some ENV variables
 ENV PATH="/mattermost/bin:${PATH}"
-ENV MM_VERSION=5.16.2
+ENV MM_VERSION=5.17.1
 
 # Build argument to set Mattermost edition
 ARG edition=enterprise
 ARG PUID=2000
 ARG PGID=2000
+ARG MM_BINARY=
 
 
 # Install some needed packages
@@ -18,21 +18,30 @@ RUN apk add --no-cache \
 	jq \
 	libc6-compat \
 	libffi-dev \
+    libcap \
 	linux-headers \
 	mailcap \
 	netcat-openbsd \
 	xmlsec-dev \
+	tzdata \
 	&& rm -rf /tmp/*
 
+# Set timezone
+RUN apk add --no-cache tzdata
+ARG TZ=Europe/Zurich
+ENV TZ ${TZ}
+
 # Get Mattermost
-RUN mkdir -p /mattermost/data \
-    && if [ "$edition" = "team" ] ; then curl https://releases.mattermost.com/$MM_VERSION/mattermost-team-$MM_VERSION-linux-amd64.tar.gz | tar -xvz ; \
+RUN mkdir -p /mattermost/data /mattermost/plugins /mattermost/client/plugins \
+    && if [ ! -z "$MM_BINARY" ]; then curl $MM_BINARY | tar -xvz ; \
+      elif [ "$edition" = "team" ] ; then curl https://releases.mattermost.com/$MM_VERSION/mattermost-team-$MM_VERSION-linux-amd64.tar.gz | tar -xvz ; \
       else curl https://releases.mattermost.com/$MM_VERSION/mattermost-$MM_VERSION-linux-amd64.tar.gz | tar -xvz ; fi \
     && cp /mattermost/config/config.json /config.json.save \
     && rm -rf /mattermost/config/config.json \
     && addgroup -g ${PGID} mattermost \
     && adduser -D -u ${PUID} -G mattermost -h /mattermost -D mattermost \
-    && chown -R mattermost:mattermost /mattermost /config.json.save
+    && chown -R mattermost:mattermost /mattermost /config.json.save /mattermost/plugins /mattermost/client/plugins \
+    && setcap cap_net_bind_service=+ep /mattermost/bin/mattermost
 
 # Copy Docker secret expand script
 ADD ./env_secrets_expand.sh /mattermost/env_secrets_expand.sh
@@ -53,4 +62,4 @@ CMD ["mattermost"]
 EXPOSE 8000
 
 # Declare volumes for mount point directories
-VOLUME ["/mattermost/data", "/mattermost/logs", "/mattermost/config", "/mattermost/plugins"]
+VOLUME ["/mattermost/data", "/mattermost/logs", "/mattermost/config", "/mattermost/plugins", "/mattermost/client/plugins"]
