--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,8 +1,10 @@
-FROM alpine:3.10
+FROM alpine:3.12
 
 # Some ENV variables
 ENV PATH="/mattermost/bin:${PATH}"
-ENV MM_VERSION=5.26.1
+ARG VERSION
+ENV MM_VERSION=${VERSION}
+ENV MM_INSTALL_TYPE=docker
 
 # Build argument to set Mattermost edition
 ARG edition=enterprise
@@ -26,16 +28,11 @@ RUN apk add --no-cache \
 	tzdata \
 	&& rm -rf /tmp/*
 
-# Set timezone
-RUN apk add --no-cache tzdata
-ARG TZ=Europe/Zurich
-ENV TZ ${TZ}
-
 # Get Mattermost
 RUN mkdir -p /mattermost/data /mattermost/plugins /mattermost/client/plugins \
     && if [ ! -z "$MM_BINARY" ]; then curl $MM_BINARY | tar -xvz ; \
-      elif [ "$edition" = "team" ] ; then curl https://releases.mattermost.com/$MM_VERSION/mattermost-team-$MM_VERSION-linux-amd64.tar.gz | tar -xvz ; \
-      else curl https://releases.mattermost.com/$MM_VERSION/mattermost-$MM_VERSION-linux-amd64.tar.gz | tar -xvz ; fi \
+      elif [ "$edition" = "team" ] ; then curl https://releases.mattermost.com/$MM_VERSION/mattermost-team-$MM_VERSION-linux-amd64.tar.gz?src=docker-app | tar -xvz ; \
+      else curl https://releases.mattermost.com/$MM_VERSION/mattermost-$MM_VERSION-linux-amd64.tar.gz?src=docker-app | tar -xvz ; fi \
     && cp /mattermost/config/config.json /config.json.save \
     && rm -rf /mattermost/config/config.json \
     && addgroup -g ${PGID} mattermost \
@@ -43,9 +40,9 @@ RUN mkdir -p /mattermost/data /mattermost/plugins /mattermost/client/plugins \
     && chown -R mattermost:mattermost /mattermost /config.json.save /mattermost/plugins /mattermost/client/plugins \
     && setcap cap_net_bind_service=+ep /mattermost/bin/mattermost
 
-# Copy Docker secret expand script
-ADD ./env_secrets_expand.sh /mattermost/env_secrets_expand.sh
-RUN chown mattermost:mattermost /mattermost/env_secrets_expand.sh && chmod +x /mattermost/env_secrets_expand.sh
+		# Copy Docker secret expand script
+		ADD ./env_secrets_expand.sh /mattermost/env_secrets_expand.sh
+		RUN chown mattermost:mattermost /mattermost/env_secrets_expand.sh && chmod +x /mattermost/env_secrets_expand.sh
 
 USER mattermost
 
